pxc/tests/test_031_thrattr/nomt.px

public namespace nomt;
import core::common -;

pure mtvaluetype struct bar {
  public int z;
}

pure multithreaded struct foo(bar const& bx) {
  int x;
  int y;
  bar b;
  ptr{bar} bp = make_ptr{bar}(bx); // error: not pure multithreaded
  public function int getbz() const { return bp->z; }
}

function void t1() {
  foo f = foo(bar(55));
  println(f.getbz());
}

t1();

